--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/controllers/hardwareCtrl.js"></script>
   </head>
 
   <body ng-app="starter">
