--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,9 @@
     <script src="lib/ng.connector.services/js/app.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <!-- <script src="cordova.js"></script> -->
+
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
