--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,8 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ng.connector.services/js/app.js"></script>
+    <script src="lib/ng.connector.services/js/services/categoryService.js"></script>
+    <script src="lib/ng.connector.services/js/services/productService.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <!-- <script src="cordova.js"></script> -->
@@ -24,8 +26,11 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/appService.js"></script>
+    <script src="js/appConstants.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/controllers/hardwareCtrl.js"></script>
+    <script src="js/controllers/playlistCtrl.js"></script>
   </head>
 
   <body ng-app="starter">
