ProductDetails page in progress

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/controllers/hardwareCtrl.js"></script>
     <script src="js/controllers/productsCtrl.js"></script>
+    <script src="js/controllers/productDetailCtrl.js"></script>
   </head>
 
   <body ng-app="starter">
