--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="js/app.js"></script>
     <script src="js/appService.js"></script>
     <script src="js/appConstants.js"></script>
+    <script src="js/appState.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/controllers/hardwareCtrl.js"></script>
     <script src="js/controllers/productsCtrl.js"></script>
