--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,10 @@
 
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
+    <!-- ng-cache plugin -->
+    <script src="lib/ngstorage/ngStorage.min.js"></script>
+    <script src="lib/angular-svg-round-progressbar/build/roundProgress.min.js"></script>
+    <script src="lib/ionic-cache-src/ionic-cache-src.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -32,6 +36,7 @@
     <script src="js/controllers/hardwareCtrl.js"></script>
     <script src="js/controllers/productsCtrl.js"></script>
     <script src="js/controllers/productDetailCtrl.js"></script>
+    <script src="js/controllers/aboutUsCtrl.js"></script>
   </head>
 
   <body ng-app="starter">
