Added ctrlUtiltyService with user alert function

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/appState.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/controllers/hardwareCtrl.js"></script>
+    <script src="js/controllers/ctrlUtilityServices.js"></script>
     <script src="js/controllers/productsCtrl.js"></script>
     <script src="js/controllers/productDetailCtrl.js"></script>
     <script src="js/controllers/aboutUsCtrl.js"></script>
