checkout page in progress

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,8 @@
     <script src="js/controllers/productsCtrl.js"></script>
     <script src="js/controllers/productDetailCtrl.js"></script>
     <script src="js/controllers/aboutUsCtrl.js"></script>
+    <script src="js/controllers/loginCtrl.js"></script>
+    <script src="js/controllers/checkoutCtrl.js"></script>
   </head>
 
   <body ng-app="starter">
