userregistration and login url

--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
     <script src="js/controllers/aboutUsCtrl.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/checkoutCtrl.js"></script>
+    <script src="js/controllers/userRegisterCtrl.js"></script>
   </head>
 
   <body ng-app="starter">
