--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/checkoutCtrl.js"></script>
     <script src="js/controllers/userRegisterCtrl.js"></script>
+    <script src="js/controllers/shippingInfoCtrl.js"></script>
   </head>
 
   <body ng-app="starter">
