Search section in progress

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
     <script src="js/controllers/checkoutCtrl.js"></script>
     <script src="js/controllers/userRegisterCtrl.js"></script>
     <script src="js/controllers/shippingInfoCtrl.js"></script>
+    <script src="js/controllers/searchCtrl.js"></script>
     
     <script src="js/controllers.js"></script>
   </head>
