Search controller in progress

--- a/www/index.html
+++ b/www/index.html
@@ -42,8 +42,13 @@
     <script src="js/controllers/userRegisterCtrl.js"></script>
     <script src="js/controllers/shippingInfoCtrl.js"></script>
     <script src="js/controllers/searchCtrl.js"></script>
+    <script src="js/controllers/searchCtrl.js"></script>
+
     
     <script src="js/controllers.js"></script>
+
+    <!-- temp service -->
+        <script src="js/services/SearchService.js"></script>
   </head>
 
   <body ng-app="starter">
