--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
     <script src="js/controllers/shippingInfoCtrl.js"></script>
     <script src="js/controllers/searchCtrl.js"></script>
     <script src="js/controllers/searchCtrl.js"></script>
+    <script src="js/controllers/demoCtrl.js"></script>
 
     
     <script src="js/controllers.js"></script>
