--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
     <script src="lib/ng.connector.services/dist/wariyumServices.js"></script>
     <script src="lib/ng-lodash/build/ng-lodash.min.js"></script>
 
