WIP: User-registration

--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,7 @@
 
     <!-- temp service -->
         <script src="js/services/SearchService.js"></script>
+        <script src="js/services/CredentialService.js"></script>
   </head>
 
   <body ng-app="starter">
