WIP: User registration

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,8 @@
     <!-- cordova script (this will be a 404 during development) -->
     <!-- <script src="cordova.js"></script> -->
 
+    <script src="lib/ngstorage/ngStorage.min.js"></script>
+
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
     <!-- ng-cache plugin -->
