--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,7 @@
     <!-- temp service -->
         <script src="js/services/SearchService.js"></script>
         <script src="js/services/CredentialService.js"></script>
+        <script src="js/services/CartService.js"></script>
   </head>
 
   <body ng-app="starter">
