--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,7 @@
 
     <!-- temp service -->
         <script src="js/services/SearchService.js"></script>
+        <script src="js/services/productService.js"></script>
         <script src="js/services/CredentialService.js"></script>
         <script src="js/services/CartService.js"></script>
   </head>
