--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,7 @@
     <script src="js/controllers/searchCtrl.js"></script>
     <script src="js/controllers/searchCtrl.js"></script>
     <script src="js/controllers/demoCtrl.js"></script>
+    <script src="js/controllers/purchaseHistoryCtrl.js"></script>
 
     
     <script src="js/controllers.js"></script>
