--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
     <script src="js/appService.js"></script>
     <script src="js/appConstants.js"></script>
     <script src="js/appState.js"></script>
+    <script src="js/TokenInterceptor.js"></script>
     <script src="js/controllers/hardwareCtrl.js"></script>
     <script src="js/controllers/ctrlUtilityServices.js"></script>
     <script src="js/controllers/productsCtrl.js"></script>
@@ -48,8 +49,6 @@
     <script src="js/controllers/searchCtrl.js"></script>
     <script src="js/controllers/demoCtrl.js"></script>
     <script src="js/controllers/purchaseHistoryCtrl.js"></script>
-
-    
     <script src="js/controllers.js"></script>
 
     <!-- temp service -->
