--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
     <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
     <script src="lib/ng.connector.services/dist/wariyumServices.js"></script>
     <script src="lib/ng-lodash/build/ng-lodash.min.js"></script>
+    <script src="lib/moment/moment.js"></script>
+    <script src="lib/angular-moment/angular-moment.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <!-- <script src="cordova.js"></script> -->
