--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,7 @@
     <script src="js/controllers/shippingInfoCtrl.js"></script>
     <script src="js/controllers/searchCtrl.js"></script>
     <script src="js/controllers/searchCtrl.js"></script>
+    <script src="js/controllers/orderDetailsCtrl.js"></script>
     <script src="js/controllers/demoCtrl.js"></script>
     <script src="js/controllers/purchaseHistoryCtrl.js"></script>
     <script src="js/controllers.js"></script>
