--- a/www/index.html
+++ b/www/index.html
@@ -52,6 +52,7 @@
     <script src="js/controllers/orderDetailsCtrl.js"></script>
     <script src="js/controllers/demoCtrl.js"></script>
     <script src="js/controllers/purchaseHistoryCtrl.js"></script>
+    <script src="js/controllers/forgetPasswordCtrl.js"></script>
     <script src="js/controllers.js"></script>
 
     <!-- temp service -->
