Promotion page created

--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,7 @@
     <script src="js/controllers/demoCtrl.js"></script>
     <script src="js/controllers/purchaseHistoryCtrl.js"></script>
     <script src="js/controllers/forgetPasswordCtrl.js"></script>
+    <script src="js/controllers/promotionCtrl.js"></script>
     <script src="js/controllers.js"></script>
 
     <!-- temp service -->
