--- a/www/index.html
+++ b/www/index.html
@@ -61,9 +61,11 @@
         <script src="js/services/productService.js"></script>
         <script src="js/services/CredentialService.js"></script>
         <script src="js/services/CartService.js"></script>
+        <script src="js/services/FCMService.js"></script>
   </head>
 
   <body ng-app="starter">
+ 
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
