Module name correction

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -15,7 +16,7 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
-    <script src="lib/ng.connector.services/dist/wariyumServices.js"></script>
+    <!--<script src="lib/ng.connector.services/dist/wariyumServices.js"></script>-->
     <script src="lib/ng-lodash/build/ng-lodash.min.js"></script>
     <script src="lib/moment/moment.js"></script>
     <script src="lib/angular-moment/angular-moment.js"></script>
@@ -57,15 +58,17 @@
     <script src="js/controllers.js"></script>
 
     <!-- temp service -->
-        <script src="js/services/SearchService.js"></script>
-        <script src="js/services/productService.js"></script>
-        <script src="js/services/CredentialService.js"></script>
-        <script src="js/services/CartService.js"></script>
-        <script src="js/services/FCMService.js"></script>
-  </head>
+    <script src="js/services/SearchService.js"></script>
+    <script src="js/services/productService.js"></script>
+    <script src="js/services/CredentialService.js"></script>
+    <script src="js/services/CartService.js"></script>
+    <script src="js/services/categoryService.js"></script>
+    <script src="js/services/FCMService.js"></script>
+</head>
 
-  <body ng-app="starter">
- 
+<body ng-app="starter">
+
     <ion-nav-view></ion-nav-view>
-  </body>
+</body>
+
 </html>
